[gd_scene load_steps=8 format=2]

[ext_resource path="res://Skills/TarrotCards/skill_icons13.png" type="Texture" id=1]
[ext_resource path="res://Skills/TarrotCards/skill_icons27.png" type="Texture" id=2]
[ext_resource path="res://Skills/TarrotCards/skill_icons12.png" type="Texture" id=3]
[ext_resource path="res://Skills/TarrotCards/TarrotCards.gd" type="Script" id=4]
[ext_resource path="res://SFX/557526__ivanmilic__witchy-laugh-2.wav" type="AudioStream" id=5]
[ext_resource path="res://SFX/632508__realmadpuppy__sinister-laugh.mp3" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Blink"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 0 ) ]
}

[node name="TarrotCards" type="Node2D"]
script = ExtResource( 4 )
damageEffectSprite = ExtResource( 1 )
poisonEffectSprite = ExtResource( 3 )
slowEffectSprite = ExtResource( 2 )
minCooldown = 5.0
maxCooldown = 10.0
badLuckChanceInPercenatage = 10.0

[node name="Image" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 7.27083, 4.13542 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="BadLuckAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 0.8

[node name="GoodLuckAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
pitch_scale = 0.9

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
